@@ -1,3 +1,8 @@
+2004-03-03  Koichi Sasada <sasada@namikilab.tuat.ac.jp>
+
+	* src/kahua-keyserv.in (handle-request): added socket-close when the
+	communication with a worker is over.
+
 2004-03-03  Yusei Tahara  <tahara@timedia.co.jp>
 
 	* test/developer.scm, test/plugin.scm, test/sandbox.scm:
